--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
