--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
+    "@turf/turf": "^5.1.6",
     "axios": "^0.18.0",
     "chart.js": "^2.7.2",
     "ol": "^5.2.0",
