--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@turf/turf": "^5.1.6",
     "axios": "^0.18.0",
     "chart.js": "^2.7.2",
+    "echarts": "^4.2.0-rc.2",
     "ol": "^5.2.0",
     "react": "^16.5.2",
     "react-chartjs-2": "^2.7.4",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
